<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/schedule_description"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingBottom="@dimen/base_element_margin"
              android:paddingLeft="@dimen/base_element_margin"
              android:paddingRight="@dimen/base_element_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_element_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/schedule_desc_img_red"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@color/color_accent"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/schedule_desc_tv_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:text="@string/day_of_the_schedule" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_element_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/schedule_desc_img_orange"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@color/orange"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/schedule_desc_tv_orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:text="@string/few_entries" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_element_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/schedule_desc_img_green"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@color/light_green_pressed"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/schedule_desc_tv_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:text="@string/many_entries" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_element_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/schedule_desc_img_grey"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@color/light_gray"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/schedule_desc_tv_grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:text="@string/does_not_work" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>