<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ProfileCardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/image_doc_item_no"
            android:layout_width="@dimen/ic_size_big"
            android:layout_height="@dimen/ic_size_big"
            android:layout_marginTop="@dimen/base_element_margin" />

        <ImageView
            android:id="@+id/image_video"
            android:layout_width="@dimen/ic_size_big"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/ic_video_cam_blue_24dp"
            android:layout_below="@+id/image_doc_item_no"
            />

        <TextView
            android:id="@+id/tv_price_name_item_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/base_element_margin"
            android:layout_marginStart="@dimen/base_element_margin"
            android:layout_marginTop="@dimen/base_element_margin"
            android:layout_toEndOf="@+id/image_doc_item_no"
            android:layout_toRightOf="@+id/image_doc_item_no"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/tv_doc_hint_item_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_price_name_item_no"
            android:layout_alignStart="@+id/tv_price_name_item_no"
            android:layout_below="@+id/tv_price_name_item_no"
            android:layout_marginTop="@dimen/base_element_margin"
            android:gravity="start"
            android:text="@string/hint_doctor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_doc_name_item_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_price_name_item_no"
            android:layout_marginTop="@dimen/base_element_margin"
            android:layout_toEndOf="@+id/tv_doc_hint_item_no"
            android:layout_toRightOf="@+id/tv_doc_hint_item_no"
            android:gravity="end"
            android:maxLines="2" />

        <TextView
            android:id="@+id/tv_date_hint_item_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_date_item_no"
            android:layout_alignBottom="@+id/tv_date_item_no"
            android:layout_alignLeft="@+id/tv_doc_hint_item_no"
            android:layout_alignStart="@+id/tv_doc_hint_item_no"
            android:gravity="start"
            android:text="@string/hint_reception_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date_item_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_doc_name_item_no"
            android:layout_marginBottom="@dimen/base_element_margin"
            android:layout_marginTop="@dimen/base_element_margin"
            android:layout_toEndOf="@+id/tv_date_hint_item_no"
            android:layout_toRightOf="@+id/tv_date_hint_item_no"
            android:gravity="end" />

        <TextView
            android:id="@+id/tv_time_hint_item_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_time_item_no"
            android:layout_alignBottom="@+id/tv_time_item_no"
            android:layout_alignLeft="@+id/tv_doc_hint_item_no"
            android:layout_alignStart="@+id/tv_doc_hint_item_no"
            android:gravity="start"
            android:text="@string/hint_reception_time"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_time_item_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_date_item_no"
            android:layout_marginBottom="@dimen/base_element_margin"
            android:layout_toEndOf="@+id/tv_time_hint_item_no"
            android:layout_toRightOf="@+id/tv_time_hint_item_no"
            android:gravity="end" />

        <TextView
            android:id="@+id/tv_branch_hint_item_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_branch_item"
            android:layout_alignBottom="@+id/tv_branch_item"
            android:layout_alignLeft="@+id/tv_branch_item"
            android:layout_alignStart="@+id/tv_doc_hint_item_no"
            android:gravity="start"
            android:text="@string/branch"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_branch_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_time_item_no"
            android:layout_toEndOf="@+id/tv_time_hint_item_no"
            android:layout_toRightOf="@+id/tv_time_hint_item_no"
            android:gravity="end" />


        <Button
            android:id="@+id/btn_enroll_again"
            style="@style/blueButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_branch_item"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/base_element_margin"
            android:padding="@dimen/base_margin_8dp"
            android:text="@string/enrollAgain"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_payment"
            style="@style/blueButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/base_margin_8dp"
            android:text="Оплатить"
            android:visibility="visible"
            android:layout_below="@+id/btn_enroll_again"
            />
    </RelativeLayout>
</androidx.cardview.widget.CardView>